# block-matching

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Block.cpp  BlockMatching.cpp  CMakeLists.txt  Edges.cpp  Makefile  Math.h  Node.cpp  Node.h  Point2D.h  Quality.cpp  SearchWindow.cpp  SearchWindow.h  Tuple.h  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/lib/: BDM.cpp  BDM.h  Block.cpp  Block.h  BlockMatching.cpp  BlockMatching.h  CMakeLists.txt  Edges.cpp  Edges.h  File.cpp  File.h  Math.cpp  Math.h  Point2D.cpp  Quality.cpp  Quality.h  SearchWindow.cpp  SearchWindow.h  Tuple.cpp
